[package]
name = "pallet-subspace"
version = "1.7.1"
description = "FRAME pallet for runtime logic of Subspace Blockchain."
authors = ["Commune Nucleus Team"]
homepage = "https://commune.com"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/commune-ai/subspace"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-std/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]

[dependencies]
bty.workspace = true
codec.workspace = true
sp-arithmetic.workspace = true
sp-core.workspace = true
pallet-balances.workspace = true
scale-info.workspace = true
frame-benchmarking = { workspace = true, optional = true }
frame-support.workspace = true
frame-system.workspace = true
sp-io.workspace = true
serde.workspace = true
serde-tuple-vec-map.workspace = true
serde_bytes.workspace = true
serde_with.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true
log.workspace = true
substrate-fixed.workspace = true
pallet-transaction-payment.workspace = true
ndarray.workspace = true

[dev-dependencies]
pallet-balances = { workspace = true, features = ["std"] }
sp-version.workspace = true
# Substrate
sp-tracing.workspace = true
parity-util-mem = { workspace = true, features = ['primitive-types'] }
rand.workspace = true
