[package]
name = "pallet-subspace"
version = "1.8.2"
description = "frame pallet for Subspace module"
authors = ["Commune Community"]
homepage = "https://commune.com"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/commune-ai/subspace"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "scale-info/std",
    "sp-std/std",
    "num-traits/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]

[dependencies]
bty = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
log = { workspace = true }
num-traits = { version = "0.2.19", default-features = false, features = [
    "libm",
] }
pallet-balances = { workspace = true }
pallet-governance-api = { path = "../governance/api", default-features = false }
pallet-subnet-emission-api = { path = "../subnet_emission/api", default-features = false }

pallet-subspace-genesis-config = { path = "./genesis-config" }
pallet-transaction-payment = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
sp-arithmetic = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
substrate-fixed = { workspace = true }

[dev-dependencies]
pallet-balances = { workspace = true, features = ["std"] }
parity-util-mem = { workspace = true, features = ['primitive-types'] }
rand = { workspace = true }
sp-io = { workspace = true }
sp-tracing = { workspace = true }
sp-version = { workspace = true }
