[package]
name = "pallet-subspace"
version = "1.8.5"
description = "FRAME pallet for runtime logic of Subspace Blockchain."
authors = ["Commune Community"]
homepage = "https://commune.com"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/commune-ai/subspace"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "scale-info/std",
    "sp-std/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]

[dependencies]
parity-scale-codec.workspace = true
sp-arithmetic.workspace = true
sp-core.workspace = true
scale-info.workspace = true
frame-benchmarking = { workspace = true, optional = true }
frame-support.workspace = true
frame-system.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true
log.workspace = true
substrate-fixed.workspace = true

pallet-subspace-genesis-config.path = "./genesis-config"
pallet-governance-api = { path = "../governance/api", default-features = false }
pallet-subnet-emission-api = { path = "../subnet_emission/api", default-features = false }

[dev-dependencies]
pallet-balances = { workspace = true, features = ["std"] }
sp-io.workspace = true
sp-version.workspace = true
# Substrate
sp-tracing.workspace = true
