[package]
name = "pallet-governance-api"
authors = ["Commune Community"]
version = "1.0.0"
edition = "2021"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]

[dependencies]
frame-support.workspace = true

sp-runtime.workspace = true

substrate-fixed.workspace = true

parity-scale-codec = { workspace = true, default-features = false, features = [
    "derive",
] }
scale-info = { workspace = true, default-features = false, features = [
    "derive",
] }
