[package]
name = "subspace-rpc"
version = "1.0.0"
edition = "2021"
authors = ["David Tanaka <https://github.com/realhardworkingdeveloper>"]
description = 'RPC methods for subspace pallet'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec.workspace = true

jsonrpsee = { workspace = true, features = ["macros", "server"] }
lazy_static = { workspace = true, optional = true }
serde_json.workspace = true
serde.workspace = true
tokio = { workspace = true, optional = true }

# Substrate packages
pallet-subspace = { default-features = false, path = "../" }
sp-api.workspace = true
sp-blockchain.workspace = true
sp-runtime.workspace = true

# local packages
subspace-runtime-api = { path = "../runtime-api", default-features = false }

[features]
default = ["std"]
std = [
  "sp-api/std",
  "sp-runtime/std",
  "subspace-runtime-api/std",
  "pallet-subspace/std",
]
