[package]
name = "subspace-runtime-api"
authors = ["David Tanaka <https://github.com/realhardworkingdeveloper>"]
version = "1.0.0"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec.workspace = true
scale-info.workspace = true
sp-api.workspace = true
sp-arithmetic.workspace = true
sp-runtime.workspace = true

serde.workspace = true

[features]
default = ["std"]
std = [
    "sp-api/std",
    "sp-runtime/std",
    "codec/std",
    "scale-info/std",
    "sp-arithmetic/std",
]
