[package]
name = "subspace-runtime-api"
authors = ["David Tanaka <https://github.com/realhardworkingdeveloper>"]
version = "1.0.0"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-arithmetic = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }
sp-runtime = { default-features = false, version = "24.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
parity-scale-codec = { version = "3.6.5", features = ["derive"], default-features = false }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }

serde = { version = "1.0.145", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
    "sp-api/std",
    "sp-runtime/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "sp-arithmetic/std"
]